Fixed main-page overflow

--- a/src/scss/base/main.scss
+++ b/src/scss/base/main.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
   font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 16px;
